--- a/src/locales/tr/translation.json
+++ b/src/locales/tr/translation.json
@@ -151,6 +151,7 @@
   },
   "settings": {
     "title": "Bildirilmesini istediğiniz konuları seçiniz.",
+    "language": "Dil Seçiniz.",
     "pamuk": {
       "title": "PAMUK PİYASASI VERİLERİ",
       "subtitle": {
